# solana-copy-bot

./: .gitignore  AGENTS.md  AGGREGATE_RECOVERY_AUDIT_SYNTHESIS_2026-03-17.md  ARCHITECTURE_BLUEPRINT.md  ARCHITECTURE_WAIVERS.md  ARTIFACT_DEPLOY.md  BUILD_ARCHITECTURE_REDESIGN_NO_HOUR_BUILDS.md  BUILD_POLICY.md  BUILD_REFACTOR_ROADMAP.md  BUY_SIGNAL_EXECUTION_REPORT.md  BUY_SIGNAL_UNIFIED_CONCLUSION.md  Cargo.toml  DISCOVERY_RUNTIME_RESTORE_PLAN_2026-03-23.md  DISCOVERY_SELECTOR_RESCUE_PLAN.md  HANDOFF_DISCOVERY_V2_OPERATIONS_2026-05-23.md  LIVE_CANARY_REPORT_RUNBOOK.md  LIVE_SIM_DUAL_THRESHOLD_TRACKING_PLAN.md  README.md  REALTIME_UI_PLAN.md  REAL_EXECUTION_DECISION_LEDGER.md  ROAD_TO_PRODUCTION.md  ROAD_TO_PRODUCTION_v2.md  SELECTION_BOOTSTRAP_REDESIGN_PLAN_2026-03-15.md  STRATEGY_EXPERIMENT_LEDGER.md  TEMP_CONSOLIDATED_AUDIT_2026-03-05.md  TEST_EXECUTION_ROLLOUT_PLAN.md  TINY_LIVE_CALIBRATION.md  UI_MONITORING_DESIGN_BRIEF_2026-03-04.md  URGENT_DISK_CAPACITY_HOTFIX_2026-03-08.md  YELLOWSTONE_GRPC_MIGRATION_PLAN.md
crates/adapter/: Cargo.toml
crates/adapter/src/: http_utils.rs  main.rs  send_rpc.rs  submit_verify.rs
crates/app/: Cargo.toml
crates/app/src/: alerts.rs  alerts_tests.rs  app_consumer_telemetry.rs  app_loop.rs  app_loop_discovery.rs  app_loop_discovery_join.rs  app_loop_discovery_start.rs  app_loop_ingestion.rs  app_loop_irrelevant_backlog.rs  app_loop_irrelevant_swap.rs  app_loop_maintenance.rs  app_loop_maintenance_heartbeat.rs  app_loop_maintenance_risk_and_retention.rs  app_loop_relevant_swap.rs  app_loop_shadow.rs  app_loop_shutdown.rs  app_loop_startup.rs  app_main.rs  app_tests.rs  cli_and_ingestion_override.rs  config_contract.rs  constants.rs  discovery_runtime.rs  entry_quote_shadow_diagnostic.rs  execution_build_plan_age.rs  execution_build_plan_metadata.rs  execution_build_plan_refresh.rs  execution_canary.rs  execution_canary_entry_gate.rs  execution_canary_route.rs  execution_canary_safety.rs  execution_canary_signing_contract.rs  execution_canary_state_machine.rs  execution_canary_submit_contract.rs  execution_canary_summary.rs  execution_pause_helpers.rs  execution_pump_fun_migration_fallback.rs  execution_pump_fun_quote_http.rs  execution_pump_fun_swap_instructions_http.rs  execution_pump_fun_swap_transaction_http.rs  (+72 more)
crates/app/tests/: tiny_live_activation_package_turn_green.rs
crates/discovery/: Cargo.toml
crates/discovery-ops/: Cargo.toml
crates/discovery-ops/src/: lib.rs  runtime_export.rs  v2_watchdog.rs
crates/discovery-ops/tests/: runtime_export.rs  v2_watchdog.rs
crates/discovery-v2/: Cargo.toml
crates/discovery-v2/src/: accumulator.rs  candidate_selection.rs  executable_feedback.rs  filters.rs  lib.rs  live_portfolio.rs  live_portfolio_rpc.rs  live_portfolio_selection.rs  materialized_status.rs  maturity.rs  metric.rs  policy.rs  publish.rs  quality_prepare.rs  quality_prepare_incremental.rs  rug.rs  rug_feedback.rs  rug_feedback_report.rs  shadow_feedback.rs  slow_hold.rs  status.rs  status_blockers.rs  status_load.rs  status_rank.rs  status_types.rs  token_market.rs  tradability.rs  wallet_filter_impact.rs  wallet_report.rs  wallet_report_cli.rs
crates/discovery-v2/tests/: executable_feedback.rs  live_portfolio_publish.rs  materialized_status.rs  maturity_selection.rs  quality_prepare.rs  rug_feedback.rs  rug_saturation.rs  shadow_feedback.rs  status_publish.rs  status_publish_cli.rs  status_scan.rs  wallet_report.rs
crates/discovery/src/: cutover_readiness.rs  discovery_v2.rs  followlist.rs  lib.rs  operator_status.rs  perf_harness.rs  quality_cache.rs  raw_gap_fill_support.rs  restore_verdict.rs  runtime_restore_ops.rs  scoring.rs  tests.rs  wallet_freshness_audit.rs  windows.rs
crates/discovery/tests/: restore_verdict.rs
crates/execution/: Cargo.toml
crates/execution/src/: auth.rs  batch_report.rs  confirm.rs  confirmation.rs  idempotency.rs  intent.rs  lib.rs  money.rs  pipeline.rs  pretrade.rs  reconcile.rs  risk_gates.rs  runtime.rs  simulator.rs  submitter.rs  submitter_response.rs
crates/executor/: Cargo.toml
crates/executor/src/: auth_crypto.rs  auth_mode.rs  auth_verifier.rs  backend_mode.rs  common_contract.rs  contract_version.rs  env_parsing.rs  executor_config_env.rs  fee_hints.rs  healthz_endpoint.rs  healthz_payload.rs  http_utils.rs  idempotency.rs  idempotency_cleanup_worker.rs  key_validation.rs  main.rs  reject.rs  reject_mapping.rs  request_endpoints.rs  request_ingress.rs  request_types.rs  request_validation.rs  response_envelope.rs  rfc3339_time.rs  route_adapters.rs  route_allowlist.rs  route_backend.rs  route_executor.rs  route_normalization.rs  route_policy.rs  secret_source.rs  secret_value.rs  send_rpc.rs  signer_source.rs  simulate_handler.rs  simulate_response.rs  submit_budget.rs  submit_claim_guard.rs  submit_deadline.rs  submit_handler.rs  (+10 more)
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  parser.rs  source.rs  tests.rs
crates/live-ops/: Cargo.toml
crates/live-ops/src/: lib.rs
crates/operators/: Cargo.toml
crates/operators/src/: entry_side_filter_backtest.rs  entry_side_filter_backtest_db.rs  entry_side_filter_backtest_summary.rs  execution_ata_sweep.rs  execution_ata_sweep_rpc.rs  execution_canary_manual_writeoff.rs  execution_canary_manual_writeoff_cli.rs  execution_canary_quote_pnl.rs  execution_canary_quote_pnl_cli.rs  execution_canary_quote_pnl_context.rs  execution_canary_quote_pnl_error_class.rs  execution_canary_quote_pnl_gate.rs  execution_canary_quote_pnl_gate_runtime.rs  execution_canary_quote_pnl_metis.rs  execution_canary_quote_pnl_quality.rs  execution_canary_quote_pnl_sell_side.rs  execution_canary_quote_pnl_upstream.rs  execution_canary_quote_pnl_wallet.rs  execution_canary_quote_pnl_wallet_live.rs  execution_canary_readiness.rs  execution_canary_tiny_config_checks.rs  execution_signer_adapter_preflight.rs  execution_signer_keypair_preflight.rs  execution_tiny_economics.rs  (+26 more)
crates/ops-dashboard/: Cargo.toml
crates/shadow/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage-core/: Cargo.toml
crates/storage-ops/: Cargo.toml
(+2008 files in other folders)
