[workspace]
members = [
  "crates/core-types",
  "crates/config",
  "crates/runtime-artifacts",
  "crates/storage-core",
  "crates/storage-ops",
  "crates/storage",
  "crates/ingestion",
  "crates/discovery-ops",
  "crates/discovery-v2",
  "crates/live-ops",
  "crates/operators",
  "crates/shadow",
  "crates/ops-dashboard",
  "crates/app",
]
exclude = [
  "crates/discovery",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["backup", "bundled", "chrono", "hooks"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"

[profile.release]
opt-level = 3
debug = 0
lto = false
codegen-units = 16
incremental = false
strip = "symbols"

[profile.release-fast]
inherits = "release"
opt-level = 1
codegen-units = 256
incremental = true
debug = 0
strip = "symbols"
lto = false

[profile.operator-release]
inherits = "release"
opt-level = 2
codegen-units = 128
incremental = true
debug = 0
strip = "symbols"
lto = false
