[package]
name = "copybot-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
axum = "0.8.4"
base64 = "0.22"
bs58 = "0.5"
hmac = "0.12"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tower = "0.5"
