[package]
name = "copybot-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-discovery = { path = "../discovery" }
copybot-ingestion = { path = "../ingestion" }
copybot-shadow = { path = "../shadow" }
copybot-execution = { path = "../execution" }
copybot-storage = { path = "../storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
serde.workspace = true
serde_json = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite.workspace = true
sha2 = "0.10"
toml.workspace = true
futures-util = "0.3.31"
tonic = "=0.14.4"
yellowstone-grpc-client = "=12.0.0"
yellowstone-grpc-proto = "=12.0.0"
