[package]
name = "copybot-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-ingestion = { path = "../ingestion" }
copybot-shadow = { path = "../shadow" }
copybot-storage-core = { path = "../storage-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite.workspace = true
toml.workspace = true
