[package]
name = "copybot-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bs58 = "0.5.1"
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-ingestion = { path = "../ingestion" }
copybot-shadow = { path = "../shadow" }
copybot-storage-core = { path = "../storage-core" }
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json = "1.0"
sha2 = "0.10.9"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite.workspace = true
toml.workspace = true
