[package]
name = "copybot-discovery-v2"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-storage-core = { path = "../storage-core" }
serde.workspace = true
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
