[package]
name = "copybot-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-storage = { path = "../storage" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json = "1.0"
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile = "3"
