[package]
name = "copybot-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-runtime-artifacts = { path = "../runtime-artifacts" }
copybot-storage = { path = "../storage" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["backup", "bundled", "chrono", "hooks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
