[package]
name = "copybot-execution"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-storage = { path = "../storage" }
serde_json = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
copybot-core-types = { path = "../core-types" }
