[package]
name = "copybot-executor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
axum = "0.8.4"
base64 = "0.22"
bincode = "1.3.3"
bs58 = "0.5"
hmac = "0.12"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite.workspace = true
serde_json = "1.0"
sha2 = "0.10"
solana-transaction = { version = "4.0.0", features = ["serde", "verify"] }
zeroize = "1.8"

[dev-dependencies]
solana-keypair = "3.1.2"
solana-message = { version = "4.0.0", features = ["serde", "wincode"] }
tower = "0.5"
