[package]
name = "copybot-live-ops"
version.workspace = true
edition.workspace = true

[lib]
name = "copybot_live_ops"
path = "src/lib.rs"

[[bin]]
name = "copybot_operator_emergency_stop"
path = "src/bin/copybot_operator_emergency_stop.rs"

[[bin]]
name = "copybot_live_service_control_wrapper"
path = "src/bin/copybot_live_service_control_wrapper.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json = "1.0"
