[package]
name = "copybot-operators"
version.workspace = true
edition.workspace = true

[lib]
name = "copybot_operators"
path = "src/lib.rs"

[[bin]]
name = "copybot_yellowstone_source_probe"
path = "src/bin/copybot_yellowstone_source_probe.rs"

[[bin]]
name = "copybot_execution_canary_readiness"
path = "src/bin/copybot_execution_canary_readiness.rs"

[[bin]]
name = "copybot_execution_canary_quote_pnl"
path = "src/bin/copybot_execution_canary_quote_pnl.rs"

[[bin]]
name = "copybot_execution_ata_sweep"
path = "src/bin/copybot_execution_ata_sweep.rs"

[[bin]]
name = "copybot_execution_tiny_economics"
path = "src/bin/copybot_execution_tiny_economics.rs"

[[bin]]
name = "copybot_execution_tiny_writeoff"
path = "src/bin/copybot_execution_tiny_writeoff.rs"

[[bin]]
name = "copybot_exit_policy_sim"
path = "src/bin/copybot_exit_policy_sim.rs"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bs58 = "0.5.1"
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-storage-core = { path = "../storage-core" }
ed25519-dalek = "2.1.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
tonic = "=0.14.4"
url.workspace = true
yellowstone-grpc-client = "=12.0.0"
yellowstone-grpc-proto = "=12.0.0"

[dev-dependencies]
copybot-core-types = { path = "../core-types" }
tempfile = "3"
