[package]
name = "copybot-ops-dashboard"
version.workspace = true
edition.workspace = true

[[bin]]
name = "copybot_ops_dashboard"
path = "src/main.rs"

[[bin]]
name = "copybot_ops_dashboard_snapshot_export"
path = "src/bin/copybot_ops_dashboard_snapshot_export.rs"

[dependencies]
anyhow.workspace = true
argon2 = "0.5"
axum = "0.8"
chrono.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
