[package]
name = "copybot-shadow"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-config = { path = "../config" }
copybot-core-types = { path = "../core-types" }
copybot-storage-core = { path = "../storage-core" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
