[package]
name = "copybot-storage-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-core-types = { path = "../core-types" }
rusqlite.workspace = true
serde.workspace = true
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
