[package]
name = "copybot-storage"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
copybot-core-types = { path = "../core-types" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite.workspace = true
serde_json = "1.0"
tracing.workspace = true
